# fused_dot_product

./: .gitignore  AST.py  LICENSE  Makefile  README.md  c_body.smt  config.py  conventional.py  conventional_design.py  main.py  optimized.py  optimized_design.py  output.txt  pyproject.toml  requirements.txt  test.py  utils.py  weird.smt
ast/: AST.py  __init__.py  spec_verifier.py  types.py
crates/rival_bridge/: Cargo.toml
crates/rival_bridge/src/: lib.rs
designs/: CSA.py  __init__.py  conventional.py  encode_Float32.py  optimized.py
docs/: fp32_adder_demo.md  operators.md
examples/: CSA.egglog  CSA.py  FP32_IEEE_adder.py  FP32_IEEE_mult.py  __init__.py  adder.cpp  adder.hpp  adder_jit.hpp  adder_no_jit.hpp  adder_norm_norm.txt  c_body.egglog  c_full.egglog  common.py  conventional.cpp  conventional.hpp  conventional.py  conventional_body  conventional_body_dreal  conventional_full  csa.cpp  csa.hpp  encode_Float32.py  max_exp.cpp  max_exponent.py  optimized.cpp  optimized.hpp  optimized.py  optimized_body  optimized_full
fused_dot_product/: __init__.py  cli.py  config.py  rival.py
infra/: check_rules.py  compile_cpp.py  jit_compile.py  make_html.py  nightly.sh  unittests.py  unittests2.py
numtypes/: Assert.py  BFloat16.py  Bool.py  Float.py  Int.py  Q.py  RuntimeTypes.py  StaticTypes.py  Tuple.py  UQ.py  basics.py  numtypes.py
tests/: test_Q_E_encode_Float32_draft.py  test_normalize_to_1_xxx_draft.py  test_round_to_the_nearest_even_draft.py
types/: BFloat16.py  Float.py  Int.py  Q.py  UQ.py  types.py
utils/: __init__.py  basics.py  composites.py  (+2 more)
(+90 files in other folders)
