[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zolotone"
version = "0.1.0"
description = "Python model of the fused dot product described by Kaul et al. (2019)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.scripts]
zolotone = "zolotone.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zolotone*", "examples*"]
